# it-factory-shopify

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
db/: bigquery.py
shopify/: orders.py  shopify.py  shopify_controller.py  shopify_repo.py  shopify_service.py
shopify/pipeline/: __init__.py  draft_orders.py  interface.py  orders.py
shopify/shop/: __init__.py
tasks/: cloud_tasks.py  tasks_service.py
test/: test_units.py
