[tool.poetry]
name = "it-factory-shopify"
version = "1.0.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.26.0"
google-cloud-bigquery = "^3.1.0"
google-cloud-tasks = "^2.9.0"
compose = "^1.2.8"
google-auth = "^2.6.6"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
mypy = "^0.910"
types-requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"
testpaths = [
    "test",
]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
